[package]
name = "munin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A visual heap memory profiler."
author = "CryptoPatrick <cryptopatrick@gmail.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
